--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,15 @@
 @import 'global';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+// Imports functions, variables, and mixins that are needed by other Bootstrap files
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+// Import Reboot
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/grid'; // add the grid
+@import '~bootstrap/scss/utilities'; // add css utilities
+
 html {
   font-size: 62.5%; /* with the standard base font size of 16px this will be equal to 10px */
 }
