--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -23,6 +23,7 @@ body {
   font-family: -apple-system, 'BlinkMacSystemFont', '.SFNSDisplay-Regular',
     'San Francisco', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande',
     sans-serif;
+  background-color: $light;
 }
 
 *,
