--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <h1>
+    <h1 [@simpleFadeAnimation]="'in'">
       Profile:
       <img *ngIf="user" [src]="user.photo" />
       <span *ngIf="user">{{ user.first_name }} {{ user.last_name }}</span>
@@ -107,7 +107,8 @@
       <mat-tab-group>
         <mat-tab label="Profile Detail">
           <mat-card>
-            <div class="profile-detail-box" *ngIf="user">
+            <app-loading-spinner [loading]="!user"></app-loading-spinner>
+            <div class="profile-detail-box" *ngIf="user" [@simpleFadeAnimation]="'in'">
               <span>profile detail</span>
               <mat-card>
                 <ul>
@@ -156,8 +157,8 @@
             </div>
           </mat-card>
         </mat-tab>
-        <mat-tab label="Profile ID's"> Content 2 </mat-tab>
-        <mat-tab label="Activity Timeline"> Content 3 </mat-tab>
+        <mat-tab label="Profile ID's" disabled> Content 2 </mat-tab>
+        <mat-tab label="Activity Timeline" disabled> Content 3 </mat-tab>
       </mat-tab-group>
     </div>
   </div>
