--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -15,7 +15,7 @@
         <p class="title">quick facts</p>
         <div class="info-box">
           <div class="info-box-header">
-            <span>stauts</span>
+            <span>status</span>
             <a href="#">
               <mat-icon>open_in_new</mat-icon>
             </a>
