--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -20,7 +20,7 @@
       <ng-container matColumnDef="photo">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row">
-          <img [src]="row.photo" />
+          <img [src]="row.photo" alt="avatar" />
         </td>
       </ng-container>
 
